--- a/shop-minecraft/package.json
+++ b/shop-minecraft/package.json
@@ -9,9 +9,6 @@
     "@firebase/auth": "^1.3.0",
     "@mui/icons-material": "^5.14.6",
     "@mui/material": "^5.14.6",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "@types/firebase": "^3.2.1",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
@@ -48,6 +45,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.22.11",
+    "@testing-library/jest-dom": "^6.1.2",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.4",
+    "jest-mock": "^29.6.3",
     "typescript": "^4.9.5"
   }
 }
